# MFREEX

./: .clang_complete  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  meshless.sublime-project  meshless.sublime-workspace  preform
MFREEX/: CMakeLists.txt  square.1.ele  square.1.node  square.1.poly  square.poly
MFREEX/include/: BLOCKS.h  cellSearch.h  convert_to_material_point.h  internal_force_buckley.h  internal_force_mooney.h  internal_force_neo.h  stress_points.h
MFREEX/include/Bmat/: generate_Bmat.h
MFREEX/include/Boundary/: amplitude.h  getBoundary.h  iv_addNode.h
MFREEX/include/Boundary/Contact/: contactDetection.h
MFREEX/include/Boundary/Displacement/: DisplacementBC.h  enforceBC.h  essential_boundary.h  setUpBC.h
MFREEX/include/Deformation/: incremental_deformation_gradient.h  poldec.h  rotate_tensor.h  update_Polar_Decomposition.h  velocity_grad.h
MFREEX/include/Force/Internal/: internalForce_Buckley.h  internalForce_Inelastic.h  internalForce_Inelastic_Buckley.h  internalForce_hyperelastic.h  internalForce_hyperelastic_S.h
MFREEX/include/Integration/: DomainMaterialPoint.h  defgrad.h  gMat.h  gradient_stabilisation.h  integration_structure.h  mass_matrix.h  material_point.h  quad.h
MFREEX/include/Integration/SCNI/: generate_mscni.h  generate_scni.h  mscni_update_B.h  scni_update_B.h
MFREEX/include/Integration/Triangle/: triangle_quadrature.h
MFREEX/include/Material/: material.h
MFREEX/include/Material/Buckley/: buckleyBond.h  buckleyConf.h  buckleyStress.h  edwardsVilgis.h  gamma.h  lambdaCrit.h  new_Buckley.h  new_Buckley_State.h
MFREEX/include/Material/Hyperelastic/: SVK.h  compress_neo.h  cubicRivlin.h  hyperelastic_materials.h  mooneyRivlin.h  svk.h  yeoh.h
MFREEX/include/Material/Plasticity/: j2_plasticity.h
MFREEX/include/Mesh/: Elements.h
MFREEX/include/PostProcess/: saveDisp.h
MFREEX/include/ShapeFunction/: mls_shapefunction_materialpoint.h  neighbours_materialpoint.h  weight_function_materialpoint.h
MFREEX/include/Timestep/: timestep.h
MFREEX/include/input/: read_config.h  read_input_mesh.h  read_input_points.h
MFREEX/include/math/: cmath3d.h
MFREEX/src/: BLOCKS.c  cellSearch.c  internal_force_buckley.c  internal_force_buckley_SP.c  internal_force_mooney.c  internal_force_neo.c  internal_force_svk.c  quad.c  stress_points.c
MFREEX/src/Bmat/: generate_Bmat.c
MFREEX/src/Boundary/: getBoundary.c  iv_addNode.c
MFREEX/src/Boundary/Contact/: contactDetection.c
MFREEX/src/Boundary/Displacement/: DisplacementBC.c  enforceBC.c  essential_boundary.c  setUpBC.c
MFREEX/src/Deformation/: incremental_deformation_gradient.c  poldec.c  rotate_tensor.c  update_Polar_Decomposition.c  velocity_grad.c
MFREEX/src/Force/Internal/: internalForce_Buckley.c  internalForce_Inelastic.c  internalForce_Inelastic_Buckley.c  (+3 more)
MFREEX/src/Integration/: DomainMaterialPoint.c  defgrad.c  gMat.c  gradient_stabilisation.c  integration_structure.c  mass_matrix.c  material_point.c
MFREEX/src/Material/: material.c
MFREEX/src/Mesh/: Elements.c
MFREEX/src/PostProcess/: saveDisp.c
MFREEX/src/ShapeFunction/: mls_shapefunction_materialpoint.c  neighbours_materialpoint.c  weight_function_materialpoint.c
MFREEX/src/input/: read_config.c  read_input_mesh.c  read_input_points.c  read_points.c
lib/: CMakeLists.txt
lib/Eigen/: CMakeLists.txt
lib/Eigen/include/: dsyev2.h  dsyevc3.h  dsyevh3.h  dsyevq3.h
lib/Eigen/src/: CMakeLists.txt  dsyevc3.c  dsyevh3.c  dsyevq3.c
lib/Meschach/: CMakeLists.txt  machine.h
lib/Meschach/arch/: CMakeLists.txt
lib/clipped_voronoi/: .clang_complete  CMakeLists.txt
lib/clipped_voronoi/lib/: CMakeLists.txt
lib/efsflib/: CMakeLists.txt
lib/efsflib/lib/: CMakeLists.txt
lib/gpc/: CMakeLists.txt
lib/math/: cmath3d.h
lib/thread_pool/: CMakeLists.txt
lib/triangulate/: CMakeLists.txt
lib/triangulate/include/: connect_segments.h  triangle.h  trigen.h
lib/triangulate/src/: connect_segments.c  triangle.c  trigen.c
lib/util/: CMakeLists.txt
lib/util/include/: contraction.h  determinant.h  m_inverse_small.h  mat2csv.h  matmul.h  matop_3x3.h  meshgrid.h  smoothstep.h  symmeig_small.h  trace.h
lib/util/src/: contraction.c  determinant.c  m_inverse_small.c  mat2csv.c  matmul.c  matop_3x3.c  meshgrid.c  smoothstep.c  symmeig_small.c  trace.c
problems/Cylinder/: .internalForce.c.swp  CMakeLists.txt  boundary.txt  boundary1.txt  cylinder.c  cylinder.nodes  cylinder.segs  cylinder_before_changes.c  cylinder_tri_comparison.c  cylinder_with_changes.c  internalForce.c  internalForce.h  loadDisp.txt  simple.sites
problems/Cylinder/Arch/: drawCylinder.m  makefile  mesh.1.ele  mesh.1.node  plotCells.m  readCells.m  simple  simple.edges  solution.ods
problems/Cylinder/Displacement/: displacement_1001.txt  displacement_1002.txt  displacement_1005.txt  displacement_1006.txt  displacement_1009.txt  displacement_1010.txt  displacement_1012.txt  displacement_1014.txt  displacement_1021.txt  displacement_1022.txt  displacement_1023.txt  displacement_1029.txt  displacement_1031.txt  displacement_1034.txt  displacement_1035.txt  displacement_1039.txt  displacement_1040.txt  displacement_1041.txt  displacement_1045.txt  displacement_1047.txt  displacement_1049.txt  displacement_105.txt  displacement_1051.txt  displacement_1052.txt  displacement_1054.txt  displacement_1059.txt  displacement_106.txt  displacement_1060.txt  displacement_1063.txt  displacement_1077.txt  displacement_1079.txt  displacement_1083.txt  displacement_1086.txt  displacement_1088.txt  displacement_109.txt  displacement_1091.txt  displacement_1093.txt  displacement_1094.txt  displacement_1096.txt  displacement_110.txt  (+3413 more)
problems/beam/: CMakeLists.txt  beam.c  beam_triangle.c  beam_voronoi.c  square.segs
problems/preform_updated/: CMakeLists.txt  preform.c  preform.nodes  preform.segs  preform_before_mould.c  preform_before_updated.c
problems/test/: CMakeLists.txt  meshgrid.c  square.nodes  test.c
problems/tube/: CMakeLists.txt  simple.edges  tube.c
problems/tube/arch/: internalForce.c  simple  solution.ods  tube.c
(+11038 files in other folders)
