cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(Eigen)
SET(EIGEN_INTERNAL_SRC
	${CMAKE_CURRENT_SOURCE_DIR}/src/dsytrd3.c 
	${CMAKE_CURRENT_SOURCE_DIR}/src/dsyevc3.c 
	${CMAKE_CURRENT_SOURCE_DIR}/src/dsyevj3.c 
	${CMAKE_CURRENT_SOURCE_DIR}/src/dsyevq3.c 
	${CMAKE_CURRENT_SOURCE_DIR}/src/dsyevv3.c 
	${CMAKE_CURRENT_SOURCE_DIR}/src/dsyevh3.c 
	${CMAKE_CURRENT_SOURCE_DIR}/src/dsyevd3.c 
)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

FILE(GLOB EIGEN_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
SET(EIGEN_LIB_OUT_PATH ${PROJECT_BINARY_DIR}/lib)

set(ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)


SET(EIGEN_LIBRARY_SOURCE
    ${EIGEN_INTERNAL_SRC}
    ${EIGEN_HEADERS})

SET(GCC_COVERAGE_COMPILE_FLAGS " -O3 -Wall -fPIC -std=c99 ")
add_definitions(${GCC_COVERAGE_COMPILE_FLAGS})

add_library(Eigen STATIC ${EIGEN_LIBRARY_SOURCE})